Added helpers file,started on products crud

--- a/composer.json
+++ b/composer.json
@@ -59,5 +59,8 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "files":[
+        "app/Helpers/helpers.php"
+    ]
 }
